# xogre

./: CMakeLists.txt  README.md
include/: Context.hpp  Handle.hpp  HandleManager.hpp  Node.hpp  Renderer.hpp  Scene.hpp
src/: CMakeLists.txt  Context.cpp  HandleManager.cpp  Scene.cpp
tests/: CMakeLists.txt  Main.cpp  Test.cpp  Test.hpp  TestHandle.cpp  TestScene.cpp
