
PROJECT(XOGRE)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6.4)

#SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

IF(UNIX)
  IF(APPLE)
    SET(CMAKE_OSX_ARCHITECTURES x86_64)
    ADD_DEFINITIONS("-DPLATFORM_MAC")
  ELSE()
    ADD_DEFINITIONS("-DPLATFORM_LINUX")
  ENDIF()
ENDIF(UNIX)

INCLUDE_DIRECTORIES(
  "${CMAKE_CURRENT_SOURCE_DIR}/src"
  "${CMAKE_CURRENT_SOURCE_DIR}/include"
)

LINK_DIRECTORIES(
)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tests)

